test/types/sync/ferguson/non-nilable-sync-error.good
non-nilable-sync-error.chpl:2: error: sync variables containing non-nilable classes are not currently supported
